# ahrs

./: CMakeLists.txt
include/: dcm.h  quaternion.h
src/: dcm.cpp  quaternion.cpp
test/: test_ahrs.cpp  test_dcm.cpp  test_quaternion.cpp
